fix stretching img height

--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -15,6 +15,7 @@ img,
 picture {
   margin: 0;
   max-width: 100%;
+  height: auto;
 }
 
 figcaption,
